pr7007/state/grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    reference.resources.gardener.cloud/configmap-7e515e00: grafana-datasources-2c9450c4
    reference.resources.gardener.cloud/configmap-2600a75f: grafana-dashboards-ef1894f4
    reference.resources.gardener.cloud/configmap-a84f06a9: grafana-dashboard-providers-acaa2b61
  creationTimestamp: "2023-02-03T10:02:32Z"
  generation: 2
  labels:
    component: grafana
    gardener.cloud/role: monitoring
  name: grafana
  namespace: shoot--local--local
  resourceVersion: "555752"
  uid: 8356e5eb-227e-45bd-a5ce-74e910d58d52
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      component: grafana
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        reference.resources.gardener.cloud/configmap-7e515e00: grafana-datasources-2c9450c4
        reference.resources.gardener.cloud/configmap-2600a75f: grafana-dashboards-ef1894f4
        reference.resources.gardener.cloud/configmap-a84f06a9: grafana-dashboard-providers-acaa2b61
      creationTimestamp: null
      labels:
        component: grafana
        gardener.cloud/role: monitoring
        networking.gardener.cloud/to-dns: allowed
        networking.gardener.cloud/to-loki: allowed
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: topology.kubernetes.io/zone
                operator: In
                values:
                - "0"
      containers:
      - env:
        - name: GF_ALERTING_ENABLED
          value: "false"
        - name: GF_AUTH_ANONYMOUS_ENABLED
          value: "true"
        - name: GF_AUTH_BASIC_ENABLED
          value: "false"
        - name: GF_AUTH_DISABLE_LOGIN_FORM
          value: "true"
        - name: GF_AUTH_DISABLE_SIGNOUT_MENU
          value: "true"
        - name: GF_DATE_FORMATS_DEFAULT_TIMEZONE
          value: UTC
        - name: GF_SNAPSHOTS_EXTERNAL_ENABLED
          value: "false"
        - name: GF_USERS_VIEWERS_CAN_EDIT
          value: "true"
        image: grafana/grafana:7.5.17
        imagePullPolicy: IfNotPresent
        name: grafana
        ports:
        - containerPort: 3000
          name: web
          protocol: TCP
        resources:
          limits:
            memory: 400Mi
          requests:
            cpu: 10m
            memory: 32Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/lib/grafana
          name: grafana-storage
        - mountPath: /var/lib/grafana/dashboards
          name: grafana-dashboards
        - mountPath: /etc/grafana/provisioning/datasources
          name: grafana-datasources
        - mountPath: /etc/grafana/provisioning/dashboards
          name: grafana-dashboard-providers
      dnsPolicy: ClusterFirst
      priorityClassName: gardener-system-100
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - emptyDir:
          sizeLimit: 100Mi
        name: grafana-storage
      - configMap:
          defaultMode: 420
          name: grafana-dashboards-ef1894f4
        name: grafana-dashboards
      - configMap:
          defaultMode: 420
          name: grafana-datasources-2c9450c4
        name: grafana-datasources
      - configMap:
          defaultMode: 420
          name: grafana-dashboard-providers-acaa2b61
        name: grafana-dashboard-providers
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2023-02-03T10:02:34Z"
    lastUpdateTime: "2023-02-03T10:02:34Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2023-02-03T10:02:32Z"
    lastUpdateTime: "2023-02-03T10:02:34Z"
    message: ReplicaSet "grafana-66ccb77fd9" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 2
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
