pr7007/state/grafana-users-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/auth-realm: Authentication Required
    nginx.ingress.kubernetes.io/auth-secret: observability-ingress-users-f27eb0bf
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/configuration-snippet: proxy_set_header X-Scope-OrgID
      user;
  creationTimestamp: "2023-02-02T16:37:31Z"
  generation: 2
  labels:
    component: grafana
    role: users
  name: grafana-users
  namespace: shoot--local--local
  resourceVersion: "27165"
  uid: 519f85fd-8b81-47a3-ba62-d31bf1033401
spec:
  ingressClassName: nginx-ingress-gardener
  rules:
  - host: gu-local--local.ingress.local.seed.local.gardener.cloud
    http:
      paths:
      - backend:
          service:
            name: grafana-users
            port:
              number: 3000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - gu-local--local.ingress.local.seed.local.gardener.cloud
    secretName: grafana-tls-fdf90952
status:
  loadBalancer:
    ingress:
    - ip: 127.0.0.1
